BuildHughes/translation-tool/inputs/source_meta/objects/Common_PayU_Error_Response__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores the response code and the corresponding message for Pay U</description>
    <fields>
        <fullName>ResponseCode__c</fullName>
        <label>Response Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseText__c</fullName>
        <label>ResponseText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Common_PayU_Error_Response</label>
</CustomObject>